# sli_gpd

./: CMakeLists.txt  CMakeLists2.txt  can_use.pcd  package.xml
include/gpd/: clustering.h  grasp_detector.h  grasp_detector_clu.h  grasp_detector_gmm.h  learning.h
include/nodes/: grasp_detection_node.h  grasp_detection_node_gmm.h
launch/: baxter_15_channels.launch  baxter_3_channels.launch  classify_candidates_file_15_channels.launch  classify_candidates_file_3_channels.launch  create_grasp_images.launch  create_training_data.launch  generate_grasp_candidates.launch  importance_sampling_baxter_15_channels.launch  importance_sampling_baxter_3_channels.launch  importance_sampling_file_15_channels.launch  tutorial0.launch  tutorial1.launch  tutorial2.launch  ur5_15_channels.launch  ur5_hand_geometry.launch
msg/: CloudIndexed.msg  CloudSamples.msg  GraspConfigList.msg
scripts/: select_grasp.py
src/nodes/: classify_candidates.cpp  generate_candidates.cpp
src/sli_gpd/: grasp_detector.cpp  grasp_detector1.cpp  grasp_detector_clucpp.cpp  grasp_detector_debug.cpp  grasp_detector_gmm.cpp  grasp_detector_sampleframe.cpp  learning.cpp  learning1.cpp
